feat(wipe): decouple backup and wipe logic in WipeHandlers and fix shadow plugin classifier issue